# RTKPythonPackage

./: CMakeLists.txt  azure-pipelines.yml
scripts/: macpython-build-module-wheels.sh  macpython-download-cache-and-build-module-wheels.sh  manylinux-build-module-wheels.sh  manylinux-download-cache-and-build-module-wheels.sh  windows-build-module-wheels.py  windows-download-cache-and-build-module-wheels.ps1
